2003-12-22  James Henstridge  <james@daa.com.au>

	* gtk/gtk.override (ignore): ignore gtk_plug_construct on all
	architectures.

	* gtk/gdk.defs (gdk_pixmap_foreign_new): caller owns return
	value (bug #129754).
	(window_foreign_new): same here.

2003-12-17  James Henstridge  <james@daa.com.au>

	* configure.in (CFLAGS): add -fno-strict-aliasing to CFLAGS if the
	compiler supports it.  The Python API breaks some of the strict
	aliasing rules.

	* acinclude.m4 (JH_ADD_CFLAG): new macro to check whether the
	compiler supports a particular cflag.

	* codegen/codegen.py
	(GInterface.get_initial_class_substdict): GInterface wrappers
	should be sizeof(PyObject), since they are mixins.
	* codegen/codegen.py (GInterfaceWrapper.get_initial_class_substdict): 

2003-12-19  Johan Dahlin  <johan@gnome.org>

	* gtk/gdk.defs (fill): Change to guint32. Patch by
	hyriand@thegraveyard.org. Fixes 121611.

	* gtk/pygtkcellrenderer.c
	(pygtk_generic_cell_renderer_start_editing): Allow return values
	that are NULL. Patch by Tim Evans, fixes #122786

	* gtk/gtktreeview.override (_wrap_gtk_tree_model_iter_children):
	Allow parent to be None. Patch by Benjamin CAMA, fixes #124593

	* gtk/gtk.defs: Allow all GdkColor arguments for
	gtk_widget_modify_* to be null. Patch by jkluebs@luebsphoto.com,
	fixes #127178
	(GtkTreeView.expand_row): Set return value to gboolean. Patch by
	Doug Quale, fixes #126406

2003-12-18  Johan Dahlin  <johan@gnome.org>

	* gtk/gtk.defs (set_tip): Allow null for tip_text. Patch by John
	Ehresman, fixes #128623.

	* gtk/pygtktreemodel.c: handle None iterator values. Patch by John
	Ehresman, fixes #126479.

2003-12-05  Johan Dahlin  <johan@gnome.org>

	* gtk/gtktreeview.override (pygtk_tree_selection_foreach_marshal):
	Increase the ref count on Py_None (#128448, Vsevolod Fedorov)

	* gtk/gtk-types.c (pygtk_tree_model_row_get_parent): Swap parent
	and child argument. (#123605, patch by Steve Chaplin)

2003-10-23  Johan Dahlin  <jdahlin@async.com.br>
